Bug 492699 - "Tracks" menu in Elisa is completely broken
Summary: "Tracks" menu in Elisa is completely broken
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
: 487132 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-09-06 00:46 UTC by paninomaninodesu
Modified: 2024-10-11 14:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
innocuous error message (13.78 KB, image/jpeg)
2024-10-11 14:37 UTC, paninomaninodesu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description paninomaninodesu 2024-09-06 00:46:46 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY


STEPS TO REPRODUCE
1. Click the "Tracks" side menu in the interface on the upper left
2. try to play any track/music
3. 

OBSERVED RESULT
Instead of the track you clicked to play start playing, some other random music plays and apparently all tracks are added to the music list.

EXPECTED RESULT
To just play the track I selected and not fill the music list menu

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Neon User
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION
I usually use the "Album" menu to listen to the music, or the "Files" menu, so I have no idea how long the "Tracks" menu isn't working like that.
Couldn't record direct feed video, Peek kept giving an error.
Comment 1 paninomaninodesu 2024-09-06 00:52:18 UTC
Video showing the problem, was too big to attach: https://www.dropbox.com/scl/fi/4z8lxm7xmcg029vu11yfs/VID_20240905_213627.mp4?rlkey=0t1d0141z5hiebis25j90od5f&st=krxeskyi&dl=0
Comment 2 Bug Janitor Service 2024-09-10 06:25:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/624
Comment 3 Bug Janitor Service 2024-09-10 06:25:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/624
Comment 4 paninomaninodesu 2024-09-10 15:50:16 UTC
(In reply to Bug Janitor Service from comment #3)
> A possibly relevant merge request was started @
> https://invent.kde.org/multimedia/elisa/-/merge_requests/624

"When trying to play a track without metadata, the track would not play because MediaPlayList::data did not return the track url."

Track without metadata, that's it!
I only tried to use the Tracks Menu to listen to assorted music, like some rips from YT. Normally I would use the Album Menu. I tried playing some tracks that are neatly arranged on their correct Albums with all their correct metadata e tags it played correctly.
That must be the fix to this bug.
But again, this problem only happens when using the Tracks Menu, it doesn't you use the Files Menu.
Comment 5 Jack Hill 2024-09-15 11:09:36 UTC
Git commit 14e0f3d621ec67eb7fcdb9f797756373334b1810 by Jack Hill, on behalf of Pedro Nishiyama.
Committed on 15/09/2024 at 11:09.
Pushed by jackh into branch 'master'.

Fix tracks without metadata not playing


When trying to play a track without metadata, the track would not play because MediaPlayList::data did not return the track url.

Test plan:

Start playing a track without metadata from the Tracks view.

Previously: the track was considered invalid and was skipped

Now: the track is correctly played

M  +3    -0    src/mediaplaylist.cpp

https://invent.kde.org/multimedia/elisa/-/commit/14e0f3d621ec67eb7fcdb9f797756373334b1810
Comment 6 Jack Hill 2024-09-15 11:12:23 UTC
Git commit c9abeb97a3427eac3459c68f111b0232f98abf9b by Jack Hill.
Committed on 15/09/2024 at 11:12.
Pushed by jackh into branch 'release/24.08'.

Fix tracks without metadata not playing


When trying to play a track without metadata, the track would not play because MediaPlayList::data did not return the track url.

Test plan:

Start playing a track without metadata from the Tracks view.

Previously: the track was considered invalid and was skipped

Now: the track is correctly played


(cherry picked from commit 14e0f3d621ec67eb7fcdb9f797756373334b1810)

e8af77f5 Fix tracks without metadata not playing

Co-authored-by: Pedro Nishiyama <nishiyama.v3@gmail.com>

M  +3    -0    src/mediaplaylist.cpp

https://invent.kde.org/multimedia/elisa/-/commit/c9abeb97a3427eac3459c68f111b0232f98abf9b
Comment 7 paninomaninodesu 2024-09-18 22:25:21 UTC
*** Bug 487132 has been marked as a duplicate of this bug. ***
Comment 8 paninomaninodesu 2024-10-11 14:37:44 UTC
Created attachment 174694 [details]
innocuous error message
Comment 9 paninomaninodesu 2024-10-11 14:38:15 UTC
Updated arrived here (24.08.02) and it's working. But it still shows on the screen three "error messages".
Again, it's working, it's just that I think those error messages shouldn't appear?