Fix tracks without metadata not playing

When trying to play a track without metadata, the track would not play because MediaPlayList::data did not return the track url.

Test plan:

Start playing a track without metadata from the Tracks view.

Previously: the track was considered invalid and was skipped

Now: the track is correctly played

BUG: 492699